# KotobaTranscriber

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_REVIEW.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODE_REVIEW_COMPLETE.md  COMPATIBILITY_FIX_REPORT.md  DEPLOYMENT_SUMMARY.md  FILE_TAB_IMPLEMENTATION.md  INSTALLATION.md  MEMORY_TEST_IMPLEMENTATION_SUMMARY.md  MIDTERM_STEPS_COMPLETE.md  NEXT_STEPS_COMPLETE.md  PROBLEM4_IMPLEMENTATION_SUMMARY.md  PROJECT_TRANSFORMATION_COMPLETE.md  README.md  REALTIME_FEATURE_COMPLETED.md  SECURITY_IMPLEMENTATION.md  SKIP_PERMISSIONS_FLAG.md  TASK5_COMPLETION.md  THIRD_PARTY_LICENSES.md  TYPE_HINTS_SUMMARY.md  add_type_hints.py  app_settings.json  build.spec  build_backend.spec  build_installer.bat  build_installer.ps1  build_release.py  build_v2.2_pyqt5.spec  conftest.py  create_icon.py  create_release.py  custom_vocabulary.json  install-cpu.bat  install-cuda.ps1  install-optional.bat  install.bat  (+18 more)
.backups/: app_settings_20251019_231244.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  codeql.yml  dependency-review.yml  performance.yml  release.yml  stale.yml  test.yml
config/: config.example.yaml  config.yaml  logging.yaml
data/: construction_dictionary.json
docs/: ADDITIONAL_IMPROVEMENT_PROPOSALS.md  AGEC_USAGE.md  CI_CD_GUIDE.md  CI_CD_SETUP_SUMMARY.md  CODE_REVIEW_REPORT.md  COMPREHENSIVE_CODE_REVIEW.md  CUDA_SETUP.md  DEPLOYMENT_GUIDE.md  FINAL_IMPLEMENTATION_SUMMARY.md  ICON.md  ICON_SETUP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_GUIDE.md  MIGRATION_PyQt5.md  PERFORMANCE_REPORT.md  README.md  REALTIME_IMPLEMENTATION_SUMMARY.md  REALTIME_TECHNICAL_DETAILS.md  REALTIME_TRANSCRIPTION_GUIDE.md  REVIEW_REPORT.md  TEST_REPORT_v2.2.md  TEST_RESULTS.md
docs/plans/: app-unification-plan.md  code-improvement-plan.md  ffmpeg-path-fix-plan.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.svelte
frontend/src/components/: FileSelector.svelte  ProgressBar.svelte  Sidebar.svelte  ThemeToggle.svelte  Toast.svelte  VolumeBar.svelte
frontend/src/lib/: api.ts  stores.ts  types.ts  (+1 more)
locales/en/: messages.json
locales/ja/: messages.json
memory/: kotoba-exe-rebuild-report.md  kotoba-implementation-report.md
releases/: RELEASE_CREATION_GUIDE.md  RELEASE_NOTES.md
releases/KotobaTranscriber-v2.1.0/: DISTRIBUTION.md  HASHES.json  LICENSE  README.md
src/: __init__.py  adaptive_buffer_manager.py  advanced_features.py  api_corrector.py  app_settings.py  base_engine.py  batch_processor.py  cache_manager.py  config_manager.py  constants.py  construction_vocabulary.py  custom_dictionary.py  custom_vocabulary.py  dark_theme.py  device_manager.py  enhanced_batch_processor.py  enhanced_error_handling.py  enhanced_export.py  enhanced_folder_monitor.py  enhanced_subtitle_exporter.py  error_recovery.py  exceptions.py  faster_whisper_engine.py  folder_monitor.py  i18n.py  llm_corrector.py  llm_corrector_standalone.py  llm_utils.py  logger.py  main.py  main_window_enhanced.py  meeting_minutes_generator.py  meeting_mode.py  memory_optimizer.py  minutes_generator.py  model_pool.py  monitor_app.py  optimized_pipeline.py  parallel_processor.py  performance_monitor.py  (+21 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  tray.rs
src/api/: __init__.py  auth.py  dependencies.py  event_bus.py  folder_monitor_service.py  main.py  realtime_worker.py  schemas.py  websocket.py  workers.py
src/export/: __init__.py  common.py  excel_exporter.py  word_exporter.py
src/tabs/: __init__.py  file_tab.py  monitor_tab.py  settings_tab.py
src/ui/: main_window.py
src/utils/: __init__.py  safe_io.py
tests/: APPSETTINGS_TEST_COMPLETE.md  INTEGRATION_TEST_REPORT.md  MEMORY_TEST_README.md  QUICKSTART_MEMORY_TEST.md  README.md  TEST_SUMMARY.md  conftest.py  production_readiness_test.py  run_app_settings_tests.py  run_integration_tests.py  test_app_settings.py  test_app_settings_integration.py  test_construction_dict.py  test_core_modules.py  test_enhancements.py  test_integration.py  test_main_startup.py  test_meeting_mode.py  test_memory_leak.py  test_minutes_generator.py  test_transcription_worker_base.py  test_type_hints.py  test_v2.2_comprehensive.py  test_v22_comprehensive.py
tests/test_api/: conftest.py  test_auth.py  test_auth_token_rotation.py  test_batch_worker_cancel.py  test_constants.py  test_edge_cases.py  test_event_bus.py  test_event_bus_advanced.py  test_event_bus_thread_safety.py  test_eventbus_cow.py  test_health.py  test_round5.py  test_round5_extra.py  test_round5_workers.py  test_routers_security.py  test_schemas.py  test_settings.py  test_transcription_thread_safety.py  test_websocket_auth.py  test_worker_state_concurrency.py
tests/unit/: test_exceptions.py  test_text_formatter.py
(+15 files in other folders)
